WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46858
Fix AudioContext to use new HRTFDatabaseLoader API
https://bugs.webkit.org/show_bug.cgi?id=46858
Summary
Fix AudioContext to use new HRTFDatabaseLoader API
Chris Rogers
Reported
2010-09-29 17:11:42 PDT
Fix AudioContext to use new HRTFDatabaseLoader API
Attachments
Patch
(2.20 KB, patch)
2010-09-29 17:17 PDT
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
Patch
(9.90 KB, patch)
2010-10-04 17:04 PDT
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2010-09-29 17:17:01 PDT
Created
attachment 69285
[details]
Patch
Chris Rogers
Comment 2
2010-10-04 17:04:10 PDT
Created
attachment 69722
[details]
Patch
Chris Rogers
Comment 3
2010-10-04 17:05:10 PDT
James, I got rid of the hrtfDatabaseLoader() method and now use m_hrtfDatabaseLoader directly.
James Robinson
Comment 4
2010-10-04 17:05:23 PDT
Comment on
attachment 69722
[details]
Patch R=me
WebKit Commit Bot
Comment 5
2010-10-05 01:16:41 PDT
Comment on
attachment 69722
[details]
Patch Clearing flags on attachment: 69722 Committed
r69094
: <
http://trac.webkit.org/changeset/69094
>
WebKit Commit Bot
Comment 6
2010-10-05 01:16:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug