2010-10-05  Chris Rogers  <crogers@google.com>

Reviewed by James Robinson.

        Fix AudioContext to use new HRTFDatabaseLoader API
        https://bugs.webkit.org/show_bug.cgi?id=46858

        No new tests since audio API is not yet implemented.

        * webaudio/AudioContext.cpp:
        (WebCore::AudioContext::AudioContext):
        (WebCore::AudioContext::isRunnable):
        * webaudio/AudioContext.h:
        * webaudio/AudioContext.idl:

Canonical link: https://commits.webkit.org/59701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69094 268f45cc-cd09-0410-ab3c-d52691b4dbfc